--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="board circle">
-        <div class="cell x" data-cell></div>
-        <div class="cell circle" data-cell></div>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
@@ -21,7 +21,7 @@
     </div>
 
     <div class="winner-message" data-winner-message>
-        <p>X Venceu!</p>
+        <p class="winner-message-text">X Venceu!</p>
         <button class="winner-message-button">Reiniciar</button>
     </div>
     
