--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Jogo da Velha</title>
 </head>
 <body>
-    <div class="board circle">
+    <div class="board" data-board>
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
