--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </div>
 
     <div class="winner-message" data-winner-message>
-        <p class="winner-message-text">X Venceu!</p>
-        <button class="winner-message-button">Reiniciar</button>
+        <p class="winner-message-text" data-winner-message-text>X Venceu!</p>
+        <button class="winner-message-button" data-restart-button>Reiniciar</button>
     </div>
     
     <script src="./main.js"></script>
