--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
     </div>
     
     <script src="./main.js"></script>
+
+    <footer>
+        <p class="copyright">&copy; Lucas Carvalho - Developer Front-end</p>
+    </footer>
 </body>
 </html>
